--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -54,7 +54,9 @@
           {{{subTitle}}}
         </p>
       </div>
-      {{{body}}}
+      <div class="row">
+        {{{body}}}
+      </div>
     </div>
     <script src="/javascripts/action.js"></script>
   </body>
