--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,20 +1,24 @@
 $background-color: #27383e
 $orange: #fa7073
+$btn-shadow-color: #bd5e5b
 $blue: #00B7FF
 $border-radius-8: 8px
 $border-radius-3: 3px
-$white-font: #ffffff
+$white-font: #f8f8f8
 $black-font: #505050
 $default-font-size: 18px
-$resource-header-font-size: 20px
+$card-header-font-size: 20px
 $header-font-size: 40px
 $bold-font: 800
+$font-family-base: proxima-nova,open sans,sans-serif,system
+$font-family-bold: proxima-nova-bold,open sans,sans-serif,system
 $line-height: 26px
+$card-body-padding: 40px
 
 body
   background-color: $background-color!important
   padding: 50px
-  font-family: proxima-nova,open sans,sans-serif,system
+  font-family: $font-family-base
   font-weight: 300
   color: $white-font!important
   font-size: $default-font-size!important
@@ -22,7 +26,6 @@ body
 
 .section-header-text
   font-family: proxima-nova-bold,open sans,sans-serif,system
-  font-weight: $bold-font
   font-size: $header-font-size
   line-height: 50px!important
   letter-spacing: -1px
@@ -48,85 +51,54 @@ body
 .flex-column
   flex-direction: column
 
-.resources
-  flex-direction: column
-  align-items: center
-  overflow: auto
-  .list-group
-    padding: 0
-    .list-group-item
-      background-color: transparent
-      border: none
-      margin-top: 50px
-      .card
-        padding: 0
-        border: none
-        border-radius: $border-radius-8 $border-radius-8 $border-radius-3 $border-radius-3
-        box-shadow: 0 1px 1px rgba(0,0,0,.5)
-        font-size: $default-font-size
-        margin: 0 auto
-        width: 650px
-        .card-header
-          font-size: $resource-header-font-size
-          font-weight: 600
-          background-color: $orange
-          min-height: 3rem
-          position: relative
-          border-top-left-radius: $border-radius-8
-          border-top-right-radius: $border-radius-8
-        .card-body
-          color: $black-font
-          padding: 2rem
-          line-height: $line-height
-        .card-footer
-          .row
-            &, div
-              display: flex
-            .links
-              display: flex
-              justify-content: space-between
-              .card-link
-                text-decoration: underline
-                color: $black-font
-                justify-content: space-between
-                display: flex
-                align-items: flex-end
-                margin: 0 1rem
-            .button-box
-              padding: 0
-              .btn
-                background-color: $orange
-                border: none
-                box-shadow: 0 2px 0 #bd5e5b
-                font-size: 16px
-                font-weight: 700
-                border-radius: $border-radius-8
-                padding: 12px 40px 10px
-                margin: 0 auto
-                text-transform: uppercase
-                white-space: nowrap
-                width: 100%
-            span
-              font-weight: calc(#{$bold-font} / 2.66)
-            .card-link
-              margin: 0 3rem
+.card
+  border: none
+  margin: 50px auto 30px auto!important
+  border-radius: $border-radius-8 $border-radius-8 $border-radius-3 $border-radius-3
 
-::-webkit-scrollbar
-  display: none
+.card-header
+  background-color: $orange
+  padding: 10px auto!important
+  border-top-left-radius: $border-radius-8!important
+  border-top-right-radius: $border-radius-8!important
 
-@media (max-width: 750px)
-  .list-group-item, .card
-    width: 100%!important
-  .card-footer
-    .row
-      display: block!important
-      div:first-child
-        display: none!important
-      .button-box
-        .btn
-          white-space: normal!important
-      .links
-        padding: 0!important
-        margin: 0!important
-        a
-          margin: 0!important
+.card-header p
+  margin: 0
+
+p.panel-title
+  color: $white-font
+  font-family: $font-family-bold
+  font-size: $card-header-font-size
+  font-weight: $bold-font
+
+.card-body
+  font-size: $default-font-size
+  line-height: $line-height
+  color: $black-font
+  padding: $card-body-padding
+
+.card-footer
+  border-bottom-left-radius: $border-radius-3
+  border-bottom-right-radius: $border-radius-3
+
+.button-spot
+  display: flex
+  justify-content: center
+
+.card-footer .button-spot .btn
+  background-color: $orange
+  width: 100%
+  border-radius: 6px
+  color: $white-font
+  padding: 12px 40px 10px
+  font-weight: 700
+  font-size: 16px
+  box-shadow: 0 2px 0 $btn-shadow-color
+  text-transform: uppercase
+  border: none
+  white-space: nowrap
+
+.links-spot
+  display: flex
+  align-items: flex-end
+  justify-content: space-between
