fits on all devices, pixels retain ratio across all devices

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,13 @@
 body {
   background-color: #27383e !important;
-  padding: 50px;
   font-family: proxima-nova, open sans, sans-serif, system;
   font-weight: 300;
   color: #f8f8f8 !important;
   font-size: 18px !important;
-  word-spacing: 1px; }
+  word-spacing: 1px;
+  padding-top: 50px; }
 
-.section-header-text {
+.header-text {
   font-family: proxima-nova-bold,open sans,sans-serif,system;
   font-size: 40px;
   line-height: 50px !important;
@@ -17,13 +17,16 @@ body {
 .text-center {
   text-align: center; }
 
-.section-subheader-text {
-  font-weight: calc(800 / 2.66);
-  line-height: 24px;
-  font-size: 18px; }
+.subheader-text {
+  font-size: 18px;
+  line-height: calc(50px / 2); }
+
+.container {
+  max-width: 1080px; }
 
 .row {
-  padding: 0; }
+  padding: 0;
+  margin: 0; }
 
 .flex {
   display: flex; }
@@ -36,8 +39,12 @@ body {
 
 .card {
   border: none;
-  margin: 50px auto 30px auto !important;
-  border-radius: 8px 8px 3px 3px; }
+  margin: 50px auto 30px auto;
+  border-radius: 8px 8px 3px 3px;
+  width: 650px;
+  max-width: 100%;
+  font-size: 18px;
+  line-height: 26px; }
 
 .card-header {
   background-color: #fa7073;
@@ -50,13 +57,9 @@ body {
 
 p.panel-title {
   color: #f8f8f8;
-  font-family: proxima-nova-bold, open sans, sans-serif, system;
-  font-size: 20px;
-  font-weight: 800; }
+  font-family: proxima-nova-bold, open sans, sans-serif, system; }
 
 .card-body {
-  font-size: 18px;
-  line-height: 26px;
   color: #505050;
   padding: 40px; }
 
@@ -74,8 +77,9 @@ p.panel-title {
   border-radius: 6px;
   color: #f8f8f8;
   padding: 12px 40px 10px;
-  font-weight: 700;
-  font-size: 16px;
+  font-family: proxima-nova-bold, open sans, sans-serif, system;
+  font-weight: 800;
+  font-size: 18px;
   box-shadow: 0 2px 0 #bd5e5b;
   text-transform: uppercase;
   border: none;
@@ -84,6 +88,19 @@ p.panel-title {
 .links-spot {
   display: flex;
   align-items: flex-end;
-  justify-content: space-between; }
+  justify-content: space-evenly; }
+
+::-webkit-scrollbar {
+  display: none; }
+
+@media (max-width: 650px) {
+  .container-fluid {
+    padding: 5px; }
+  .card-footer .row {
+    display: block !important; }
+  .footer-filler {
+    display: none !important; }
+  .links-spot {
+    max-width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
