--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -41,22 +41,21 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
     <meta name="theme-color" content="#fa7073">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class="container-fluid">
       <div class="row flex flex-center">
-        <p class="text-center section-header-text">
+        <p class="text-center header-text">
           {{{title}}}
         </p>
       </div>
       <div class="row flex flex-center">
-        <p class="text-center section-subheader-text">
+        <p class="text-center subheader-text">
           {{{subTitle}}}
         </p>
       </div>
-      <div class="row">
-        {{{body}}}
-      </div>
+      {{{body}}}
     </div>
     <script src="/javascripts/action.js"></script>
   </body>
