--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -6,6 +6,7 @@ $border-radius-8: 8px
 $border-radius-3: 3px
 $white-font: #f8f8f8
 $black-font: #505050
+$light-grey: #a9a09b
 $default-font-size: 18px
 $card-header-font-size: 20px
 $header-font-size: 40px
@@ -16,6 +17,8 @@ $line-height: 26px
 $card-body-padding: 40px
 $card-width: 650px
 $header-line-height: 50px
+$header-border-bottom-color: rgba(0,0,0,.125)
+$footer-background-color: rgba(0,0,0,.03)
 
 body
   background-color: $background-color!important
@@ -43,6 +46,10 @@ body
 .container
   max-width: 1080px
 
+.nav-link, .card-link
+  color: $black-font
+  text-decoration: underline
+
 .row
   padding: 0
   margin: 0
@@ -64,12 +71,14 @@ body
   max-width: 100%
   font-size: $default-font-size
   line-height: $line-height
+  z-index: 2
 
 .card-header
   background-color: $orange
   padding: 10px auto!important
   border-top-left-radius: $border-radius-8!important
   border-top-right-radius: $border-radius-8!important
+  border-bottom: 1px solid $header-border-bottom-color
 
 .card-header p
   margin: 0
@@ -108,6 +117,22 @@ p.panel-title
   display: flex
   align-items: flex-end
   justify-content: space-evenly
+  .card-link
+    color: $black-font
+
+.navbar
+  position: fixed
+  padding: 0
+  max-width: 1200px
+  margin: 0 auto
+  z-index: 1
+  .nav-item
+    .nav-link
+      color: $white-font
+
+.animated
+  animation-duration: 1s
+  animation-fill-mode: both
 
 ::-webkit-scrollbar
   display: none
@@ -121,3 +146,18 @@ p.panel-title
     display: none!important
   .links-spot
     max-width: 100%
+    padding-top: .75em
+@media (max-width: 1160px)
+  .navbar
+    border-top: 1px solid $header-border-bottom-color
+    background-color: #ffffff
+    z-index: 100
+    .nav
+      width: 100%
+      justify-content: space-around
+      background-color: $footer-background-color
+      .nav-item
+        .nav-link
+          color: $black-font
+          padding: 0
+
