--- a/views/index.hbs
+++ b/views/index.hbs
@@ -29,10 +29,10 @@
   <nav id="footer" class="navbar fixed-bottom animated">
     <ul class="nav">
       <li class="nav-item">
-        <a class="nav-link" href="https://tippin.me/@JWWeatherman_" target="_blank">Donate</a>
+        <a class="nav-link" href="https://tallyco.in/s/jgcy2e/" target="_blank">Donate</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://twitter.com/JWWeatherman_" target="_blank">Feedback</a>
+        <a class="nav-link" href="https://twitter.com/JWWeatherman_/status/1093518624155975680" target="_blank">Feedback</a>
       </li>
     </ul>
   </nav>
