add resource links
issue:

hard to share resource

changes:

convert panel-title to hyperlink

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -83,9 +83,10 @@ body
 .card-header p
   margin: 0
 
-p.panel-title
+a.panel-title
   color: $white-font
   font-family: $font-family-bold
+
 
 .card-body
   color: $black-font
