--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,9 +2,9 @@
   {{#each resources}}
     <div class="card">
       <div class="card-header text-center">
-        <p class="panel-title ">
-          {{name}}
-        </p>
+          <a class="panel-title" id="{{href name}}" href="#{{href name}}">
+              {{name}}
+          </a>
       </div>
       <div class="card-body">
         <p>
