--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,11 +17,11 @@
     }
     </style>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
     <!-- Jquery -->
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/javascript/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/javascript/bootstrap.min.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
